--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm an old dog learning new tricks. Learning web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Cheeseland.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, mountain biking, and volleyball.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Creative Director</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Farmington, Minnesota</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To challenge myself and gain useful skills for the future.</p>
     </section>
 
     <footer id="footer">
